force-app/main/default/objects/Return_Item__c/fields/Batch_No__c.field-meta.xml
<CustomField>
    <fullName>Batch_No__c</fullName>
    <label>Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>