force-app/main/default/objects/Return_Item__c/fields/Damaged_Stock__c.field-meta.xml
<CustomField>
    <fullName>Damaged_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Damaged Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Return Items (Damaged Stock)</relationshipLabel>
    <relationshipName>Return_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>