force-app/main/default/objects/Return_Item__c/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <formula>if(TEXT(Return__r.Type__c) ==&apos;Against Customer&apos;,   Return__r.Sales_Invoice__r.Invoice_Number__c ,Invoice_Item__r.Sales_Invoice__r.Invoice_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Id</label>
    <type>Text</type>
</CustomField>