force-app/main/default/objects/Return_Item__c/fields/Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Invoice_Item__c.Sales_Invoice__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sales_Invoice__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Invoice_Item__c</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Return_Items</relationshipName>
    <type>Lookup</type>
</CustomField>