force-app/main/default/objects/Return_Item__c/fields/Invoice_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item_Id__c</fullName>
    <formula>Invoice_Item__r.Inv_Line_Items_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Item Id</label>
    <type>Text</type>
</CustomField>