force-app/main/default/objects/Return_Item__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <label>Return</label>
    <referenceTo>Return__c</referenceTo>
    <relationshipLabel>Return Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>