force-app/main/default/objects/Return_Item__c/fields/Return_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Return_Item_Id__c</fullName>
    <displayFormat>ITEM-{0000}</displayFormat>
    <label>Return Item Id</label>
    <type>AutoNumber</type>
</CustomField>