force-app/main/default/objects/Return_Item__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <formula>IF( ISPICKVAL(Tax_Option__c, &apos;Old Tax&apos;),Product__r.Old_Sales_Tax__c,Product__r.Sales_Tax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>