force-app/main/default/objects/Return_Item__c/fields/SAP_Sales_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Tax_Code__c</fullName>
    <formula>CASE(Sales_Tax__c, 
					0.05,Return__r.Branch__r.SAP_5_GST_Code__c, 
						0.12,Return__r.Branch__r.SAP_12_GST_Code__c, 
						0.18,Return__r.Branch__r.SAP_18_GST_Code__c, 
						0.28,Return__r.Branch__r.SAP_28_GST_Code__c, 
			&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Sales Tax Code</label>
    <type>Text</type>
</CustomField>