force-app/main/default/objects/Return_Item__c/fields/Tax_Option__c.field-meta.xml
<CustomField>
    <fullName>Tax_Option__c</fullName>
    <label>Tax Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old Tax</fullName>
            </value>
            <value>
                <fullName>New Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>