force-app/main/default/objects/Return_Item__c/fields/Total_after_discount__c.field-meta.xml
<CustomField>
    <fullName>Total_after_discount__c</fullName>
    <formula>IF(Unit_Price__c != UnitPriceWithDiscount__c  , 
				((Total_Unit_Price__c - (Total_Unit_Price__c * Cash_Discount__c))  +
	((Total_Unit_Price__c - (Total_Unit_Price__c * Cash_Discount__c)) * Sales_Tax__c  )
	), Total_Unit_Price__c  +
		(Total_Unit_Price__c  * Sales_Tax__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total after discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>