force-app/main/default/objects/Return_Item__c/fields/Total_after_tax__c.field-meta.xml
<CustomField>
    <fullName>Total_after_tax__c</fullName>
    <formula>Unit_Price__c + ( Unit_Price__c * Product__r.Sales_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total after tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>