force-app/main/default/objects/Return_Item__c/fields/Total_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price__c</fullName>
    <formula>Unit_Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>