force-app/main/default/objects/Return_Item__c/fields/Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Code__c</fullName>
    <formula>Return__r.Route__r.Route_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Code</label>
    <type>Text</type>
</CustomField>